third_party/move/move-compiler-v2/tests/visibility-checker/package_visibility_cycle.move
module 0x42::A {
    public(package) fun foo() {
        0x42::B::foo()
    }
}

module 0x42::B {
    public(package) fun foo() {
        0x42::A::foo()
    }
}
